# RubikCubeSolver

./: BFSSolver.h  CMakeLists.txt  DFSSolver.h  IDAStarSolver.h  IDDFSSolver.h  README.md  Rubiks1D.cpp  Rubiks3D.cpp  RubiksCube.cpp  RubiksCube.h  RubiksCubeBitboard.cpp  main.cpp
Model/: RubiksCube.cpp  RubiksCube.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.h
Solver/: BFSSolver.h  DFSSolver.h  IDAStarSolver.h  IDDFSSolver.h
